# zero-rvc

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  example-dataset.py  example-infer.py  example-train.py  headers.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
app/: constants.py  dataset.py  dataset_maker.py  infer.py  model.py  settings.py  train.py  tutorial.py  zero.py
zerorvc/: __init__.py  auto_loader.py  constants.py  dataset.py  pretrained.py  rvc.py  trainer.py
zerorvc/f0/: __init__.py  extractor.py  load.py
zerorvc/f0/rmvpe/: __init__.py  constants.py  deepunet.py  mel.py  model.py  seq.py  stft.py
zerorvc/hubert/: __init__.py  extractor.py  load.py
zerorvc/preprocess/: __init__.py  crop.py  preprocess.py  slicer2.py
zerorvc/synthesizer/: __init__.py  attentions.py  commons.py  models.py  modules.py  transforms.py
zerorvc/utils/: __init__.py  data_utils.py  losses.py  mel_processing.py
